fixed  description field to use dynamic size, text is now fully visible and automatically adjusts

--- a/front/matskumesta/src/App.css
+++ b/front/matskumesta/src/App.css
@@ -44,6 +44,21 @@
   width: 60%;
 }
 
+.editable-rounded-input {
+  padding: 20px;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  width: 100%;
+  flex: 1; /* Take up the remaining space */
+  margin-right: 10px;
+  outline: none;
+}
+
+.editable-rounded-input:focus {
+  /* border-color: #007bff; */
+  border-color: rgb(51, 51, 51);
+}
+
 /* Responsive adjustments */
 @media (max-width: 768px) {
   .input-box {
